--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -32,9 +32,11 @@ textarea {
   }
 }
 .freewrites {
-  // min-width: 1040px;
   max-width: 100%;
   width: 800px;
+  @media screen and (max-width: 450px) {
+    width: 90vw;
+  }
 }
 .textarea {
   resize: both;
@@ -45,8 +47,6 @@ textarea {
     justify-self: center;
     height: 100px;
     width: stretch;
-    max-width: 800px;
-    max-height: 400px;
     border-radius: 10px 10px 0px 0px;
     padding: 10px;
     outline: none;
