--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -43,6 +43,7 @@ textarea {
   @media screen and (max-width: 450px) {
     width: 90vw;
   }
+  margin: 0 auto;
 }
 .textarea {
   resize: both;
@@ -72,7 +73,7 @@ textarea {
   }
 }
 .margin-top {
-  margin-top: 5%;
+  margin-top: 2vh;
 }
 .padding-horizontal {
   padding: 0 5%;
@@ -124,4 +125,9 @@ textarea {
 
 .click {
   cursor: pointer;
+}
+
+.form {
+  background-color: white;
+  padding: 10px;
 }
