changing new note and new project

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -84,7 +84,7 @@ textarea {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
   margin-top: 20px;
   h1,
